--- a/notebook/02-approach1.ipynb
+++ b/notebook/02-approach1.ipynb
@@ -25,14 +25,16 @@
    "outputs": [],
    "source": [
     "# general setup\n",
-    "import pandas as pd\n",
     "import os, glob, sys\n",
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# model setup\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.metrics import accuracy_score\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
     "\n",
     "# utils setup\n",
     "current_directory = os.getcwd()\n",
@@ -55,34 +57,12 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['../dataset/train/NTL E-Nose - Patient 21.txt', '../dataset/train/NTL E-Nose - Patient 35.txt', '../dataset/train/NTL E-Nose - Patient 20.txt', '../dataset/train/NTL E-Nose - Patient 36.txt', '../dataset/train/NTL E-Nose - Patient 22.txt', '../dataset/train/NTL E-Nose - Patient 37.txt', '../dataset/train/NTL E-Nose - Patient 27.txt', '../dataset/train/NTL E-Nose - Patient 26.txt', '../dataset/train/NTL E-Nose - Patient 18.txt', '../dataset/train/NTL E-Nose - Patient 30.txt', '../dataset/train/NTL E-Nose - Patient 31.txt', '../dataset/train/NTL E-Nose - Patient 19.txt', '../dataset/train/NTL E-Nose - Patient 42.txt', '../dataset/train/NTL E-Nose - Patient 56.txt', '../dataset/train/NTL E-Nose - Patient 57.txt', '../dataset/train/NTL E-Nose - Patient 55.txt', '../dataset/train/NTL E-Nose - Patient 41.txt', '../dataset/train/NTL E-Nose - Patient 40.txt', '../dataset/train/NTL E-Nose - Patient 8.txt', '../dataset/train/NTL E-Nose - Patient 50.txt', '../dataset/train/NTL E-Nose - Patient 44.txt', '../dataset/train/NTL E-Nose - Patient 45.txt', '../dataset/train/NTL E-Nose - Patient 9.txt', '../dataset/train/NTL E-Nose - Patient 47.txt', '../dataset/train/NTL E-Nose - Patient 53.txt', '../dataset/train/NTL E-Nose - Patient 46.txt', '../dataset/train/NTL E-Nose - Patient 7.txt', '../dataset/train/NTL E-Nose - Patient 63.txt', '../dataset/train/NTL E-Nose - Patient 62.txt', '../dataset/train/NTL E-Nose - Patient 6.txt', '../dataset/train/NTL E-Nose - Patient 4.txt', '../dataset/train/NTL E-Nose - Patient 60.txt', '../dataset/train/NTL E-Nose - Patient 61.txt', '../dataset/train/NTL E-Nose - Patient 5.txt', '../dataset/train/NTL E-Nose - Patient 1.txt', '../dataset/train/NTL E-Nose - Patient 58.txt', '../dataset/train/NTL E-Nose - Patient 28.txt', '../dataset/train/NTL E-Nose - Patient 29.txt', '../dataset/train/NTL E-Nose - Patient 17.txt', '../dataset/train/NTL E-Nose - Patient 16.txt', '../dataset/train/NTL E-Nose - Patient 12.txt', '../dataset/train/NTL E-Nose - Patient 13.txt', '../dataset/train/NTL E-Nose - Patient 39.txt', '../dataset/train/NTL E-Nose - Patient 10.txt', '../dataset/train/NTL E-Nose - Patient 38.txt']\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(train_files)\n\u001b[1;32m      4\u001b[0m train_data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([ENoseIO\u001b[39m.\u001b[39mread_patient_data(f) \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m train_files])\n\u001b[0;32m----> 5\u001b[0m test_data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([ENoseIO\u001b[39m.\u001b[39;49mread_patient_data(f) \u001b[39mfor\u001b[39;49;00m f \u001b[39min\u001b[39;49;00m test_files])\n",
-      "Cell \u001b[0;32mIn[3], line 5\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[39mprint\u001b[39m(train_files)\n\u001b[1;32m      4\u001b[0m train_data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([ENoseIO\u001b[39m.\u001b[39mread_patient_data(f) \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m train_files])\n\u001b[0;32m----> 5\u001b[0m test_data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mconcat([ENoseIO\u001b[39m.\u001b[39;49mread_patient_data(f) \u001b[39mfor\u001b[39;00m f \u001b[39min\u001b[39;00m test_files])\n",
-      "File \u001b[0;32m~/Documents/OPENCORE/DATA_CTF/NASA-Breath-Diagnostics-E-nose/utils/io.py:8\u001b[0m, in \u001b[0;36mENoseIO.read_patient_data\u001b[0;34m(filepath)\u001b[0m\n\u001b[1;32m      6\u001b[0m lines \u001b[39m=\u001b[39m file\u001b[39m.\u001b[39mreadlines()\n\u001b[1;32m      7\u001b[0m patient_id \u001b[39m=\u001b[39m \u001b[39mint\u001b[39m(lines[\u001b[39m0\u001b[39m]\u001b[39m.\u001b[39msplit(\u001b[39m'\u001b[39m\u001b[39m:\u001b[39m\u001b[39m'\u001b[39m)[\u001b[39m1\u001b[39m]\u001b[39m.\u001b[39mstrip())\n\u001b[0;32m----> 8\u001b[0m result \u001b[39m=\u001b[39m lines[\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39;49msplit(\u001b[39m'\u001b[39;49m\u001b[39m:\u001b[39;49m\u001b[39m'\u001b[39;49m)[\u001b[39m1\u001b[39;49m]\u001b[39m.\u001b[39mstrip()\n\u001b[1;32m      9\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(filepath, sep\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\t\u001b[39;00m\u001b[39m'\u001b[39m, skiprows\u001b[39m=\u001b[39m\u001b[39m3\u001b[39m)\n\u001b[1;32m     10\u001b[0m data[\u001b[39m'\u001b[39m\u001b[39mPatient_ID\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m patient_id\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_files = glob.glob('../dataset/train/*.txt')\n",
     "test_files = glob.glob('../dataset/test/*.txt')\n",
-    "print(train_files)\n",
     "train_data = pd.concat([ENoseIO.read_patient_data(f) for f in train_files])\n",
-    "test_data = pd.concat([ENoseIO.read_patient_data(f) for f in test_files])"
+    "test_data = pd.concat([ENoseIO.read_patient_data(f, is_labeled=False) for f in test_files])"
    ]
   },
   {
@@ -95,9 +75,306 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Data Info\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 17011 entries, 0 to 375\n",
+      "Data columns (total 67 columns):\n",
+      " #   Column      Non-Null Count  Dtype  \n",
+      "---  ------      --------------  -----  \n",
+      " 0   Min:Sec     17011 non-null  object \n",
+      " 1    D1         17011 non-null  float64\n",
+      " 2    D2         17011 non-null  float64\n",
+      " 3    D3         17011 non-null  float64\n",
+      " 4    D4         17011 non-null  float64\n",
+      " 5    D5         17011 non-null  float64\n",
+      " 6    D6         17011 non-null  float64\n",
+      " 7    D7         17011 non-null  float64\n",
+      " 8    D8         17011 non-null  float64\n",
+      " 9    D9         17011 non-null  float64\n",
+      " 10   D10        17011 non-null  float64\n",
+      " 11   D11        17011 non-null  float64\n",
+      " 12   D12        17011 non-null  float64\n",
+      " 13   D13        17011 non-null  float64\n",
+      " 14   D14        17011 non-null  float64\n",
+      " 15   D15        17011 non-null  float64\n",
+      " 16   D16        17011 non-null  float64\n",
+      " 17   D17        17011 non-null  float64\n",
+      " 18   D18        17011 non-null  float64\n",
+      " 19   D19        17011 non-null  float64\n",
+      " 20   D20        17011 non-null  float64\n",
+      " 21   D21        17011 non-null  float64\n",
+      " 22   D22        17011 non-null  float64\n",
+      " 23   D23        17011 non-null  float64\n",
+      " 24   D24        17011 non-null  float64\n",
+      " 25   D25        17011 non-null  float64\n",
+      " 26   D26        17011 non-null  float64\n",
+      " 27   D27        17011 non-null  float64\n",
+      " 28   D28        17011 non-null  float64\n",
+      " 29   D29        17011 non-null  float64\n",
+      " 30   D30        17011 non-null  float64\n",
+      " 31   D31        17011 non-null  float64\n",
+      " 32   D32        17011 non-null  float64\n",
+      " 33   D33        17011 non-null  float64\n",
+      " 34   D34        17011 non-null  float64\n",
+      " 35   D35        17011 non-null  float64\n",
+      " 36   D36        17011 non-null  float64\n",
+      " 37   D37        17011 non-null  float64\n",
+      " 38   D38        17011 non-null  float64\n",
+      " 39   D39        17011 non-null  float64\n",
+      " 40   D40        17011 non-null  float64\n",
+      " 41   D41        17011 non-null  float64\n",
+      " 42   D42        17011 non-null  float64\n",
+      " 43   D43        17011 non-null  float64\n",
+      " 44   D44        17011 non-null  float64\n",
+      " 45   D45        17011 non-null  float64\n",
+      " 46   D46        17011 non-null  float64\n",
+      " 47   D47        17011 non-null  float64\n",
+      " 48   D48        17011 non-null  float64\n",
+      " 49   D49        17011 non-null  float64\n",
+      " 50   D50        17011 non-null  float64\n",
+      " 51   D51        17011 non-null  float64\n",
+      " 52   D52        17011 non-null  float64\n",
+      " 53   D53        17011 non-null  float64\n",
+      " 54   D54        17011 non-null  float64\n",
+      " 55   D55        17011 non-null  float64\n",
+      " 56   D56        17011 non-null  float64\n",
+      " 57   D57        17011 non-null  float64\n",
+      " 58   D58        17011 non-null  float64\n",
+      " 59   D59        17011 non-null  float64\n",
+      " 60   D60        17011 non-null  float64\n",
+      " 61   D61        17011 non-null  float64\n",
+      " 62   D62        17011 non-null  float64\n",
+      " 63   D63        17011 non-null  float64\n",
+      " 64   D64        17011 non-null  float64\n",
+      " 65  Result      17011 non-null  object \n",
+      " 66  Patient_ID  17011 non-null  int64  \n",
+      "dtypes: float64(64), int64(1), object(2)\n",
+      "memory usage: 8.8+ MB\n",
+      "None\n",
+      "Test Data Info\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 6742 entries, 0 to 373\n",
+      "Columns: 1171 entries, 00:12.0 to  683479.7156001673\n",
+      "dtypes: float64(1152), int64(1), object(18)\n",
+      "memory usage: 60.3+ MB\n",
+      "None\n",
+      "Train Data Sample\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Min:Sec</th>\n",
+       "      <th>D1</th>\n",
+       "      <th>D2</th>\n",
+       "      <th>D3</th>\n",
+       "      <th>D4</th>\n",
+       "      <th>D5</th>\n",
+       "      <th>D6</th>\n",
+       "      <th>D7</th>\n",
+       "      <th>D8</th>\n",
+       "      <th>D9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>D57</th>\n",
+       "      <th>D58</th>\n",
+       "      <th>D59</th>\n",
+       "      <th>D60</th>\n",
+       "      <th>D61</th>\n",
+       "      <th>D62</th>\n",
+       "      <th>D63</th>\n",
+       "      <th>D64</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>Patient_ID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>07:29.6</td>\n",
+       "      <td>9934.068034</td>\n",
+       "      <td>1493.775934</td>\n",
+       "      <td>695.734215</td>\n",
+       "      <td>1274.504328</td>\n",
+       "      <td>10810.90837</td>\n",
+       "      <td>1501.151543</td>\n",
+       "      <td>57410.52632</td>\n",
+       "      <td>2011158.375</td>\n",
+       "      <td>710.478301</td>\n",
+       "      <td>...</td>\n",
+       "      <td>836.833188</td>\n",
+       "      <td>12150.26004</td>\n",
+       "      <td>302148.8224</td>\n",
+       "      <td>23528.25517</td>\n",
+       "      <td>22332.09609</td>\n",
+       "      <td>18073.57374</td>\n",
+       "      <td>108110.7166</td>\n",
+       "      <td>770474.7984</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>07:31.8</td>\n",
+       "      <td>9938.208689</td>\n",
+       "      <td>1493.775934</td>\n",
+       "      <td>696.158250</td>\n",
+       "      <td>1274.903259</td>\n",
+       "      <td>10836.83381</td>\n",
+       "      <td>1501.704284</td>\n",
+       "      <td>57422.80702</td>\n",
+       "      <td>2014549.041</td>\n",
+       "      <td>711.651245</td>\n",
+       "      <td>...</td>\n",
+       "      <td>838.245110</td>\n",
+       "      <td>12148.76342</td>\n",
+       "      <td>302083.1378</td>\n",
+       "      <td>23550.83018</td>\n",
+       "      <td>22341.90069</td>\n",
+       "      <td>18060.17640</td>\n",
+       "      <td>108148.6333</td>\n",
+       "      <td>770639.8227</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>07:34.1</td>\n",
+       "      <td>9935.979106</td>\n",
+       "      <td>1488.842785</td>\n",
+       "      <td>695.204173</td>\n",
+       "      <td>1260.461962</td>\n",
+       "      <td>10768.57443</td>\n",
+       "      <td>1495.808383</td>\n",
+       "      <td>57307.01754</td>\n",
+       "      <td>1984772.825</td>\n",
+       "      <td>711.694687</td>\n",
+       "      <td>...</td>\n",
+       "      <td>835.575294</td>\n",
+       "      <td>12151.75665</td>\n",
+       "      <td>302186.3564</td>\n",
+       "      <td>23503.49548</td>\n",
+       "      <td>22206.03684</td>\n",
+       "      <td>18074.13196</td>\n",
+       "      <td>108079.6939</td>\n",
+       "      <td>769909.0009</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>07:36.4</td>\n",
+       "      <td>9922.283093</td>\n",
+       "      <td>1482.803135</td>\n",
+       "      <td>692.829581</td>\n",
+       "      <td>1249.132325</td>\n",
+       "      <td>10680.29667</td>\n",
+       "      <td>1483.417780</td>\n",
+       "      <td>56922.80702</td>\n",
+       "      <td>1937919.980</td>\n",
+       "      <td>700.073852</td>\n",
+       "      <td>...</td>\n",
+       "      <td>834.728141</td>\n",
+       "      <td>12138.66128</td>\n",
+       "      <td>302270.8079</td>\n",
+       "      <td>23487.47451</td>\n",
+       "      <td>22190.62960</td>\n",
+       "      <td>18056.82706</td>\n",
+       "      <td>107941.8152</td>\n",
+       "      <td>769060.3046</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>07:38.6</td>\n",
+       "      <td>9922.920117</td>\n",
+       "      <td>1481.097280</td>\n",
+       "      <td>691.833100</td>\n",
+       "      <td>1242.071249</td>\n",
+       "      <td>10672.42058</td>\n",
+       "      <td>1478.949793</td>\n",
+       "      <td>56750.87719</td>\n",
+       "      <td>1918192.467</td>\n",
+       "      <td>694.534949</td>\n",
+       "      <td>...</td>\n",
+       "      <td>834.137701</td>\n",
+       "      <td>12147.26681</td>\n",
+       "      <td>302120.6719</td>\n",
+       "      <td>23471.45354</td>\n",
+       "      <td>22370.61419</td>\n",
+       "      <td>18051.80306</td>\n",
+       "      <td>107907.3455</td>\n",
+       "      <td>768824.5556</td>\n",
+       "      <td>POSITIVE</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 67 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Min:Sec           D1           D2          D3           D4           D5  \\\n",
+       "0  07:29.6  9934.068034  1493.775934  695.734215  1274.504328  10810.90837   \n",
+       "1  07:31.8  9938.208689  1493.775934  696.158250  1274.903259  10836.83381   \n",
+       "2  07:34.1  9935.979106  1488.842785  695.204173  1260.461962  10768.57443   \n",
+       "3  07:36.4  9922.283093  1482.803135  692.829581  1249.132325  10680.29667   \n",
+       "4  07:38.6  9922.920117  1481.097280  691.833100  1242.071249  10672.42058   \n",
+       "\n",
+       "            D6           D7           D8          D9  ...         D57  \\\n",
+       "0  1501.151543  57410.52632  2011158.375  710.478301  ...  836.833188   \n",
+       "1  1501.704284  57422.80702  2014549.041  711.651245  ...  838.245110   \n",
+       "2  1495.808383  57307.01754  1984772.825  711.694687  ...  835.575294   \n",
+       "3  1483.417780  56922.80702  1937919.980  700.073852  ...  834.728141   \n",
+       "4  1478.949793  56750.87719  1918192.467  694.534949  ...  834.137701   \n",
+       "\n",
+       "           D58          D59          D60          D61          D62  \\\n",
+       "0  12150.26004  302148.8224  23528.25517  22332.09609  18073.57374   \n",
+       "1  12148.76342  302083.1378  23550.83018  22341.90069  18060.17640   \n",
+       "2  12151.75665  302186.3564  23503.49548  22206.03684  18074.13196   \n",
+       "3  12138.66128  302270.8079  23487.47451  22190.62960  18056.82706   \n",
+       "4  12147.26681  302120.6719  23471.45354  22370.61419  18051.80306   \n",
+       "\n",
+       "           D63          D64    Result  Patient_ID  \n",
+       "0  108110.7166  770474.7984  POSITIVE          21  \n",
+       "1  108148.6333  770639.8227  POSITIVE          21  \n",
+       "2  108079.6939  769909.0009  POSITIVE          21  \n",
+       "3  107941.8152  769060.3046  POSITIVE          21  \n",
+       "4  107907.3455  768824.5556  POSITIVE          21  \n",
+       "\n",
+       "[5 rows x 67 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Display some basic information about the dataset\n",
     "print(\"Train Data Info\")\n",
@@ -107,8 +384,27 @@
     "\n",
     "# Display the first few rows of the training data\n",
     "print(\"Train Data Sample\")\n",
-    "print(train_data.head())\n",
-    "\n",
+    "train_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Data Result Distribution\n",
+      "Result\n",
+      "NEGATIVE    9881\n",
+      "POSITIVE    7130\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
     "# Count of POSITIVE and NEGATIVE cases\n",
     "print(\"Train Data Result Distribution\")\n",
     "print(train_data['Result'].value_counts())"
